<resources>
    <string name="app_name">AppFirebaseKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtitulologin">AUTENTICACIÓN FIREBASE</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valbtnloginfirebase">AUTENTICACIÓN FIREBASE</string>
    <string name="facebook_app_id">735361570650864</string>
    <string name="fb_login_protocol_scheme">fb735361570650864</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valfraggaleria">Galeria Storage</string>
    <string name="valfragregistro">Registro Firestore</string>
    <string name="valfraglistar">Lista Firestore</string>
    <string name="valetnompersona">Ingrese nombre</string>
    <string name="valetappersona">Ingrese apellido</string>
    <string name="valetedadpersona">Ingrese edad</string>
    <string name="valbtnregistrar">Registrar Firestore</string>
</resources>