<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/galeriaFragment">
    <fragment
        android:id="@+id/galeriaFragment"
        android:name="qboinstitute.com.appfirebasekotlin.ui.GaleriaFragment"
        android:label="@string/valfraggaleria"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/registroFragment"
        android:name="qboinstitute.com.appfirebasekotlin.ui.RegistroFragment"
        android:label="@string/valfragregistro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/listaFragment"
        android:name="qboinstitute.com.appfirebasekotlin.ui.ListaFragment"
        android:label="@string/valfraglistar"
        tools:layout="@layout/fragment_lista" />
</navigation>